gce-rke-cluster/setup/minio/minio-console-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console-ing
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  tls:
    - hosts:
      - minio-console.gcp-rke-demo.its-software-services.com
      secretName: minio-console-cert
  rules:
    - host: minio-console.gcp-rke-demo.its-software-services.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: console
                port:
                  number: 9090
